--- a/src/main/webapp/Styles.css
+++ b/src/main/webapp/Styles.css
@@ -34,6 +34,23 @@ div {
     display:block;
     overflow: auto;
 }
+.gallery
+{
+    padding-bottom: 0;
+    height: 450px;
+    width: 80%;
+    margin: 15% 10% 0 10%;
+    text-align: center;
+    border: 2px;
+    border-radius: 3%;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    display:block;
+    overflow: auto;
+}
+.upload{
+    align:center;
+}
 button{
     background: #ffffff;
     background-image: -webkit-linear-gradient(top, #ffffff, #ffffff);
